--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/springadd
-spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
+spring.jpa.generate-ddl=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/sport
+spring.datasource.username=postgres
 spring.datasource.password=root
+
+server.port=5000
