--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.jpa.generate-ddl=true
-spring.datasource.url=jdbc:postgresql://localhost:5432/sport
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST:localhost}:5432/sport
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-server.port=5000
